# veloq

./: .dockerignore  .gitignore  AI_GUIDELINE.html  AI_GUIDELINE.md  CLAUDE.md  Cargo.toml  README.md  README_DEV.md  docker-compose.yml
.config/: nextest.toml
.github/workflows/: benchmark_fs.yml  ci.yml  docker-publish.yml  mdbook.yml
.zed/: settings.json
atomic-waker/: Cargo.toml
atomic-waker/src/: lib.rs  shim.rs
docker/: Dockerfile  default.nix  deps.nix  entrypoint.sh  flake.nix  shell.nix
docker/npins/: sources.json
docs/: book.toml
docs/dev/: io_uring.md
docs/src/: ARCHITECTURE.md  STATUS.md  SUMMARY.md
docs/src/fs/: README.md
docs/src/io/: README.md
docs/src/io/buffer/: README.md
docs/src/io/driver/: README.md
docs/src/io/driver/iocp/: README.md
docs/src/io/driver/uring/: README.md
docs/src/io/socket/: README.md
docs/src/net/: README.md
docs/src/runtime/: README.md
docs/src/runtime/executor/: README.md
intrusive-linklist/: Cargo.toml
intrusive-linklist/src/: adapter.rs  cursor.rs  lib.rs  link.rs  list.rs  macros.rs  shim.rs
intrusive-linklist/tests/: integration_test.rs
src/: runtime.rs
src/runtime/: buffer.rs  context.rs  driver.rs  executor.rs  macros.rs  net.rs  op.rs  sys.rs  task.rs
src/runtime/driver/: iocp.rs  uring.rs
src/runtime/driver/iocp/: ext.rs  ops.rs  tests.rs
src/runtime/driver/uring/: ops.rs
src/runtime/net/: tcp.rs  udp.rs
src/runtime/sys/: socket.rs
src/runtime/tests/: basic.rs  tcp.rs  udp.rs
utils/veloq-atomic-waker/: Cargo.toml
utils/veloq-bitset/: Cargo.toml
utils/veloq-intrusive-linklist/: Cargo.toml  README.md
utils/veloq-intrusive-linklist/src/: cursor.rs  list.rs
utils/veloq-intrusive-linklist/tests/: integration_test.rs
utils/veloq-shim/: Cargo.toml
utils/veloq-wheel/: Cargo.toml
utils/veloq-wheel/src/: wheel.rs
veloq-buf/: Cargo.toml
veloq-buf/src/: buffer.rs  lib.rs  os.rs
veloq-buf/src/buffer/: buddy.rs  hybrid.rs
veloq-buf/src/os/: linux.rs  windows.rs
veloq-bufpool/: Cargo.toml
veloq-examples/disk-bench/src/: main.rs
veloq-local/: Cargo.toml
veloq-local/src/: lib.rs  mpsc.rs  oneshot.rs  spsc.rs
veloq-local/tests/: mpsc.rs  oneshot.rs  spsc.rs
veloq-macros/src/: lib.rs
veloq-queue/: Cargo.toml
veloq-queue/src/: lib.rs
veloq-queue/tests/: loom.rs
veloq-runtime/: Cargo.toml
veloq-runtime/benches/: fs_benchmark.rs
veloq-runtime/src/: config.rs  fs.rs  io.rs  lib.rs  runtime.rs
veloq-runtime/src/fs/: file.rs  open_options.rs
veloq-runtime/src/io/: buffer.rs  driver.rs  op.rs  socket.rs
veloq-runtime/src/io/buffer/: buddy.rs  hybrid.rs
veloq-runtime/src/io/driver/: iocp.rs  op_registry.rs  stable_slab.rs  uring.rs
veloq-runtime/src/io/driver/iocp/: blocking.rs  ext.rs  inner.rs  op.rs  ops.rs  rio.rs  submit.rs  tests.rs
veloq-runtime/src/io/driver/uring/: inner.rs  op.rs  ops.rs  submit.rs
veloq-runtime/src/io/fs/: file.rs  open_options.rs
veloq-runtime/src/io/op/: linux.rs  windows.rs
veloq-runtime/src/io/socket/: unix.rs  windows.rs
veloq-runtime/src/io/sys/: socket.rs
veloq-runtime/src/local/: mpsc.rs
veloq-runtime/src/net/: tcp.rs  udp.rs
veloq-runtime/src/runtime/: blocking.rs  context.rs  executor.rs  join.rs  mesh.rs  task.rs
veloq-runtime/src/runtime/executor/: spawner.rs
veloq-runtime/src/runtime/task/: harness.rs  raw.rs  spawned.rs
veloq-runtime/src/sync/: mpsc.rs
veloq-runtime/src/tests/: basic.rs  fs.rs  select_test.rs  spawn_to_test.rs  tcp.rs  udp.rs
veloq-shim/: Cargo.toml
veloq-shim/src/: lib.rs
veloq-sync/: Cargo.toml
veloq-sync/src/: lib.rs  mpmc.rs  mpsc.rs  mutex.rs  oneshot.rs  rwlock.rs  shim.rs  waker.rs
veloq-wheel/: Cargo.toml
veloq-wheel/benches/: wheel_bench.rs
veloq-wheel/src/: wheel.rs
