[package]
name = "veloq"
version = "0.1.0"
edition = "2024"

[dependencies]
slab = "0.4.11"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc = "0.2.178"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinSock"
] }
