[package]
name = "veloq-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
atomic-waker = "1.1.2"
futures-core = "0.3"
crossbeam-queue = "0.3"
crossbeam-utils = { version = "0.8", default-features = false }
num_cpus = "1.17.0"
veloq-bitset = { path = "../veloq-bitset" }
intrusive-collections = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc = "0.2.178"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinSock",
    "Win32_Security"
] }
veloq-wheel = { path = "../veloq-wheel" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "fs_benchmark"
harness = false
