[package]
name = "veloq-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
veloq-bitset = { path = "../veloq-bitset" }
veloq-sync = { path = "../veloq-sync" }

num_cpus = "1.17.0"
crossbeam-utils = { workspace = true }
intrusive-collections = { workspace = true }
futures-core = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-deque = "0.8"
tracing = "0.1.44"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc = "0.2.178"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Networking_WinSock",
    "Win32_Security"
] }
veloq-wheel = { path = "../veloq-wheel" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tracing-subscriber = "0.3.22"

[[bench]]
name = "fs_benchmark"
harness = false
