[package]
name = "veloq-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
veloq-bitset = { path = "../veloq-bitset" }
veloq-sync = { path = "../veloq-sync" }
veloq-buf = { path = "../veloq-buf" }

num_cpus = "1.17.0"
crossbeam-utils = { workspace = true }
intrusive-linklist = { path = "../intrusive-linklist" }
futures-core = { workspace = true }
crossbeam-queue = { workspace = true }
atomic-waker = { path = "../atomic-waker" }
crossbeam-deque = "0.8"
tracing = "0.1.44"
rustc-hash = "2.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { workspace = true }
veloq-wheel = { path = "../veloq-wheel" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }
tracing-subscriber = "0.3.22"

[[bench]]
name = "fs_benchmark"
harness = false
