[package]
name = "veloq-shim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

[dependencies.loom]
version = "0.7"
features = ["futures"]
optional = true

[features]
loom = ["dep:loom"]
alloc = []
